# TFG

./: README.md  TFG_references.odt
GazeboNavigator_v2/Assets/: NeonPP.asset
GazeboNavigator_v2/Assets/3DModels/: JOYSTI v1.fbx  iconos3d v5.fbx
GazeboNavigator_v2/Assets/Fonts/: Ankh Sanctuary SDF.asset  Future Z SDF.asset  Neon Robot SDF 1.asset
GazeboNavigator_v2/Assets/Material/: Floor.mat  Neon.mat  Red.mat  backgrund_panel.mat
GazeboNavigator_v2/Assets/Scenes/: ImmersiveGazebo.unity  MainMenu.unity
GazeboNavigator_v2/Assets/Scripts/: CamScript.cs  ChangeIntensity.cs  ContinuousMovementManager.cs  ExitGame.cs  HeadsetPublisher.cs  InputOculusDevices.cs  JoystickPublisher.cs  MenuManagement.cs  MeshCreator.cs  PointCloudSubscriber.cs  RotateObject.cs  SceneLoader.cs  TeleoperationLogic.cs  TriangleMesh.cs
GazeboNavigator_v2/Assets/Shaders/: PointCloudShader.shader  UberReplacement.shader  VertexColorBlend.shader
GazeboNavigator_v2/Assets/SimPlugins/: AGVController.cs  CameraRGBPublisher.cs  DepthCamera.cs
GazeboNavigator_v2/Assets/URDF/: tiago.urdf
GazeboNavigator_v2/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
GazeboNavigator_v2/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
GazeboNavigator_v2/UserSettings/: EditorUserSettings.asset
GazeboNavigator_v2/UserSettings/Layouts/: default-2021.dwlt
GeogebraFiles/: Cambiar sistema ref.ggb
My project/Assets/Materials/: floor-material.mat
My project/Assets/Scenes/: SampleScene.unity
My project/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
My project/OVRAssetBundles/OVRMasterBundle/: OVRMasterBundle  OVRMasterBundle.manifest  asset_resources  asset_resources.manifest
My project/OVRAssetBundles/Temp/: OVRMasterBundle  SceneLoadData.txt
My project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
My project/myapp_BackUpThisFolder_ButDontShipItWithYourGame/Managed/: UnityLinkerToEditorData.json  analytics.json  icallsummary.txt
My project/myapp_BackUpThisFolder_ButDontShipItWithYourGame/il2cppOutput/: Assembly-CSharp.cpp  Assembly-CSharp2.cpp  Assembly-CSharp3.cpp  Assembly-CSharp_CodeGen.c  AssistantCoreSDKRuntime_CodeGen.c  Facebook.Wit.Conduit_CodeGen.c  Facebook.Wit.Dictation_CodeGen.c  Facebook.Wit.TTS.Samples_CodeGen.c  Facebook.Wit.TTS_CodeGen.c  Facebook.WitAI_CodeGen.c  GenericMethods.cpp  Generics.cpp  (+147 more)
UnityScripts/: AGVController.cs  CamScript.cs  CameraPublisher.cs  CameraRGBPublisher.cs  ChangeIntensity.cs  DepthCamera.cs  HeadsetPublisher.cs  InputOculusDevices.cs  JoystickPublisher.cs  MeshCreator.cs  PointCloudShader.shader  PointCloudSubscriber.cs  RotateObject.cs  SceneLoader.cs  TriangleMesh.cs  UberReplacement.shader  VertexColorBlend.shader
UnityScripts/ScriptsFallidos/: DiffDrive.cs  DiffDrivePlugin.cs  IController.cs  JointControlPlugin.cs
install/: local_setup.sh  setup.sh
log/: latest_build
src/: README.md
src/oculus_gz_navigator/: CMakeLists.txt
src/oculus_gz_navigator/include/oculus_gz_navigator/: camera_headset_plugin.hpp  camera_plugin.hpp
src/oculus_gz_navigator/launch/: cafe.launch.py  empty_world.launch.py  oculus_keyboard_launch.py  view_cafe_wrld.launch.py
src/oculus_gz_navigator/models/mycamera/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
src/oculus_gz_navigator/references/: TFG_references.odt
src/oculus_gz_navigator/src/: camera_headset_plugin.cpp  camera_plugin.cpp
src/oculus_gz_navigator/worlds/: cafe.world  my_world.world
(+77 files in other folders)
